--- a/Android UI/AndroidUI/app/src/main/res/layout/activity_password__numeric.xml
+++ b/Android UI/AndroidUI/app/src/main/res/layout/activity_password__numeric.xml
@@ -1,9 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".TextComponents.Password_Numeric">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <RelativeLayout
+        android:id="@+id/relativeLayoutId"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="50dp">
+
+
+        <EditText
+            android:id="@+id/passwordNumericId"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="134dp"
+            android:layout_marginEnd="101dp"
+            android:ems="10"
+            android:maxLength="6"
+            android:hint="Text Password"
+            android:inputType="numberPassword" />
+
+        <Button
+            android:id="@+id/btnValidationId"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/passwordNumericId"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="87dp"
+            android:layout_marginEnd="163dp"
+            android:text="Button" />
+    </RelativeLayout>
+
+</RelativeLayout>
