--- a/Android 201/ListView/app/src/main/res/layout/activity_main.xml
+++ b/Android 201/ListView/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+        <variable name="lang"
+            type="com.hrdijital.listview.modal.LangModel"/>
+    </data>
+<RelativeLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
-    <ListView
+    android:layout_height="match_parent">
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:listitem="@layout/item"
-        android:dividerHeight="0dp"
-        android:divider="@null"
-        android:id="@+id/listview"/>
+        android:layout_height="50dp"
+        android:gravity="center"
+        android:text="@{lang.name}"
+        tools:text="Türkçe"
+        >
+    </TextView>
+    <TextView
+        android:layout_marginTop="50dp"
+        android:id="@+id/change"
+        android:text="Değiştir"
+        android:gravity="center"
+        android:textColor="@color/colorPrimary"
+        android:layout_width="match_parent"
+        android:layout_height="50dp">
+
+    </TextView>
 </RelativeLayout>
+</layout>
