--- a/Android 201/ListView/app/src/main/res/layout/item.xml
+++ b/Android 201/ListView/app/src/main/res/layout/item.xml
@@ -6,14 +6,15 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/tv_name"
-        android:paddingLeft="20dp"
+        android:id="@+id/name"
+        android:text="Dil"
+        android:paddingLeft="30dp"
         android:gravity="center_vertical"/>
 
     <ImageView
         android:layout_width="25dp"
         android:layout_height="25dp"
-        android:id="@+id/iv_check_box"
+        android:id="@+id/check_box"
         android:layout_alignParentRight="true"
         android:layout_marginRight="10dp"
         android:layout_centerVertical="true"
