--- a/Android 201/app/src/main/res/values/styles.xml
+++ b/Android 201/app/src/main/res/values/styles.xml
@@ -6,5 +6,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-
+    <style name="Icon" parent="Base.MaterialAlertDialog.MaterialComponents.Title.Icon">
+        <item name="android:layout_gravity">start|center_vertical</item>
+    </style>
 </resources>
