--- a/Android 201/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/Android 201/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,13 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:iconTintMode="multiply"
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/tab_dashboard"
         android:title="@string/title_home" />
 
     <item
         android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/tab_search"
         android:title="@string/title_dashboard" />
 
     <item
