--- a/Android 201/app/src/main/res/values/colors.xml
+++ b/Android 201/app/src/main/res/values/colors.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#000000</color>
+    <color name="colorPrimaryDark">#a9a9a9</color>
+    <color name="colorAccent">#ffffff</color>
+    <color name="tab">#FFFFFF</color>
+    <color name="tab_item">#000000</color>
+    <color name="tab_item_selected">#000000</color>
+    <color name="tab_item_unselected">#a9a9a9</color>
+    <color name="itemIconTint">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
+    <color name="border">#F5F5F5</color>
 </resources>
