--- a/Android 201/View/app/src/main/res/layout/activity_main.xml
+++ b/Android 201/View/app/src/main/res/layout/activity_main.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center_horizontal|top"
-    android:clickable="true" >
+    android:layout_height="match_parent"
+    android:clickable="true">
 
 
-<LinearLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="300dp"
         android:layout_gravity="bottom"
+        android:layout_weight="1"
         android:background="@color/center_linear_layout"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="52dp"
+            android:layout_height="0dp"
+            android:layout_weight="0.2"
             android:background="@color/top_linearlayout"
             android:orientation="horizontal"
 
@@ -86,23 +87,25 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="220dp"
+            android:layout_height="0dp"
+            android:layout_weight="0.8"
             android:orientation="horizontal">
 
-            <ListView
-                android:id="@+id/listView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
 
+            <ListView
+                android:id="@+id/mylist"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scrollbars="horizontal"
+                tools:listitem="@layout/date"></ListView>
         </LinearLayout>
 
 
         <LinearLayout
             android:id="@+id/layout4"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_marginTop="0dp"
-            android:layout_weight="1"
+            android:layout_height="0dp"
+            android:layout_weight="0.2"
             android:background="@color/bottom_linearlayout"
             android:orientation="horizontal">
 
@@ -110,31 +113,40 @@
             <Button
                 android:id="@+id/button5"
                 android:layout_width="0dp"
-                android:layout_weight="0.75"
-                android:layout_height="40dp"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="16dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/alt_button1"
+                android:layout_marginTop="5dp"
+                android:layout_weight="0.8"
+                android:layout_marginBottom="5dp"
+                android:background="@drawable/btn"
                 android:text="@string/sesli_uygulamaya_katıl"
                 android:textColor="@color/text_color"
                 android:textSize="12dp"
 
                 />
 
-            <Button
+            <LinearLayout
                 android:id="@+id/button6"
-                android:layout_width="30dp"
-                android:layout_weight="0.05"
-                android:maxWidth="30dp"
-                android:layout_height="40dp"
+                android:layout_width="23dp"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="20dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/alt_button2"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginRight="20dp"
+                android:layout_weight="0.05"
+                android:background="@drawable/btn"
                 android:drawableStart="@drawable/video"
-                android:paddingLeft="12dp"
+                android:gravity="center"
+                android:maxWidth="30dp"
                 android:textColor="@color/video"
-                android:textSize="11sp" />
+                android:textSize="11sp">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="5dp"
+                    android:src="@drawable/video" />
+            </LinearLayout>
 
         </LinearLayout>
 
