--- a/Android 201/View/app/src/main/res/layout/activity_main.xml
+++ b/Android 201/View/app/src/main/res/layout/activity_main.xml
@@ -24,63 +24,78 @@
 
             >
 
-            <Button
-                android:id="@+id/volume"
-                android:layout_width="34dp"
-                android:layout_height="34dp"
-                android:layout_gravity="center"
-                android:layout_marginLeft="20dp"
-                android:background="@drawable/volume"
-
-                />
-
-
             <LinearLayout
-                android:id="@+id/layout3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="195dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
 
-
-                >
-
-
-                <Button
-                    android:id="@+id/add"
-                    android:layout_width="37dp"
-                    android:layout_height="37dp"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="0dp"
-                    android:background="@drawable/add_personal"
-
-
-                    />
-
-
-                <Button
-                    android:id="@+id/button3"
-                    android:layout_width="37dp"
-                    android:layout_height="37dp"
+                <LinearLayout
+                    android:id="@+id/volume"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:layout_marginLeft="20dp"
-                    android:background="@drawable/baseline"
+                    android:layout_weight="0.25"
+                    android:orientation="vertical"
+                    android:gravity="center|left"
+                    >
 
-                    />
+                    <ImageView
+                        android:layout_width="34dp"
+                        android:layout_height="34dp"
+                        android:src="@drawable/volume" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center|right"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="0.95"
+                    android:gravity="end"
+                    android:orientation="horizontal"
+
+                    >
 
 
-                <Button
-                    android:id="@+id/setting"
-                    android:layout_width="37dp"
-                    android:layout_height="37dp"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="20dp"
-                    android:background="@drawable/settings"
+                    <Button
+                        android:id="@+id/add"
+                        android:layout_width="37dp"
+                        android:layout_height="37dp"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="0dp"
+                        android:background="@drawable/add_personal"
 
-                    />
 
+                        />
+
+
+                    <Button
+                        android:id="@+id/button3"
+                        android:layout_width="37dp"
+                        android:layout_height="37dp"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="20dp"
+                        android:background="@drawable/baseline"
+
+                        />
+
+
+                    <Button
+                        android:id="@+id/setting"
+                        android:layout_width="37dp"
+                        android:layout_height="37dp"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="20dp"
+                        android:background="@drawable/settings"
+
+                        />
+
+
+                </LinearLayout>
 
             </LinearLayout>
+
 
         </LinearLayout>
 
@@ -97,7 +112,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scrollbars="horizontal"
-                tools:listitem="@layout/date"></ListView>
+                tools:listitem="@layout/date" />
         </LinearLayout>
 
 
@@ -116,8 +131,8 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="10dp"
-                android:layout_weight="0.8"
                 android:layout_marginBottom="10dp"
+                android:layout_weight="0.8"
                 android:background="@drawable/btn"
                 android:text="@string/sesli_uygulamaya_katıl"
                 android:textColor="@color/text_color"
@@ -127,13 +142,13 @@
 
             <LinearLayout
                 android:id="@+id/button6"
-                android:layout_width="23dp"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_weight="0.05"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="0.15"
                 android:background="@drawable/btn"
                 android:drawableStart="@drawable/video"
                 android:gravity="center"
