--- a/Android 201/View/app/src/main/res/layout/activity_main.xml
+++ b/Android 201/View/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:clickable="true">
+    android:clickable="true"
+    android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="300dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.33">
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.33">
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.33">
+
+            </LinearLayout>
+        </LinearLayout>
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,7 +47,8 @@
         android:layout_gravity="bottom"
         android:layout_weight="1"
         android:background="@color/center_linear_layout"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -36,9 +71,8 @@
                     android:layout_gravity="center"
                     android:layout_marginLeft="20dp"
                     android:layout_weight="0.25"
-                    android:orientation="vertical"
                     android:gravity="center|left"
-                    >
+                    android:orientation="vertical">
 
                     <ImageView
                         android:layout_width="34dp"
@@ -108,7 +142,7 @@
 
 
             <ListView
-                android:id="@+id/mylist"
+                android:id="@+id/date_list_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scrollbars="horizontal"
