--- a/Android 401/MultiLiveData/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/Android 401/MultiLiveData/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,31 +1,18 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:width="512dp"
+    android:height="512dp"
+    android:viewportWidth="512"
+    android:viewportHeight="512">
     <path
-    android:fillColor="#FFFFFF"
-    android:fillType="nonZero"
+        android:pathData="M256,256m-236.17,0a236.17,236.17 0,1 1,472.34 0a236.17,236.17 0,1 1,-472.34 0"
+        android:fillColor="@color/colorPrimary"/>
+    <path
+        android:pathData="M256,512C114.853,512 0,397.167 0,256C0,114.853 114.853,0 256,0c141.167,0 256,114.853 256,256C512,397.167 397.167,512 256,512zM256,39.659C136.705,39.659 39.659,136.705 39.659,256S136.705,472.341 256,472.341S472.341,375.275 472.341,256C472.341,136.705 375.295,39.659 256,39.659z"
+        android:fillColor="@color/colorPrimary"/>
+    <path
         android:pathData="M256,373.193c-10.946,0 -19.83,-8.864 -19.83,-19.83V155.067c0,-10.946 8.884,-19.83 19.83,-19.83c10.946,0 19.83,8.884 19.83,19.83v198.296C275.83,364.329 266.946,373.193 256,373.193z"
-    android:strokeWidth="1"
-    android:strokeColor="#00000000" />
-
+        android:fillColor="#FFFFFF"/>
+    <path
+        android:pathData="M355.148,274.045H156.852c-10.946,0 -19.83,-8.884 -19.83,-19.83c0,-10.946 8.884,-19.83 19.83,-19.83h198.296c10.966,0 19.83,8.884 19.83,19.83C374.978,265.161 366.114,274.045 355.148,274.045z"
+        android:fillColor="#FFFFFF"/>
 </vector>
